--------------
my1sim85-0.4.4
--------------

Feature:
- n/a

Update:
- LED/SWI can be linked while on floating panel

Bugfix:
- [FIXED] run-time error when linking bit control while floating

Issues:
- still missing accurate 1ms (or better) timer

--------------
my1sim85-0.4.3
--------------

Feature:
- console command history
- new device: 7 segment LED (was already in 0.4.2)

Update:
- LED/SWI can now be labeled (tooltip) using middle-button click
- additional LED/SWI panels can be dynamically created
- whitespace in labels will produce assembler error (in my1asm85!)

Bugfix:
- [FIXED] conditional instruction based on sign flags is now okay
- [FIXED] Inserting device screws-up the led/swi links
  = adding new ppi maintains existing links!
  = only system reset disconnects all led/swi links

Issues:
- still missing accurate 1ms (or better) timer

--------------
my1sim85-0.4.2
--------------

Feature:
- n/a

Update:
- improved device I/O selection method
- can no longer select a connected pin (disabled)
- code: improved device I/O logic
- code: added random logic but still not used

Bugfix:
- [FIXED] device I/O pin assignment was flawed!

Issues:
- still missing accurate 1ms (or better) timer

--------------
my1sim85-0.4.1
--------------

Feature:
- n/a

Update:
- code browsing while simulation is now allowed
- added 7-segment device... simple, proof of concept for more devices?

Bugfix:
- [FIXED] Mask for RST5.5 was not checked (using RST7.5!)
- [FIXED] Missing reset sequence on 8085 power-up
- [FIXED] Console help message updated with added commands

Issues:
- still missing accurate 1ms (or better) timer

--------------
my1sim85-0.4.0
--------------

Feature:
- enables interrupt simulation (TRAP, RST7.5, RST6.5, RST5.5)
- fixed switches linked to all interrupt pins

Update:
- sample program (running light) modified to also show interrupt usage
- switch changes color (blue) to indicate on position (red=off)